finalizando a mudança de tema

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Theme Dark</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <input type="checkbox" id="btn" name="btn" />
+      <label for="btn"></label>
+    </div>
+
+    <h1>Mudança de Tema</h1>
+
+    <p>Usando apenas JavaScript, HTML e CSS.</p>
+  </body>
 </html>
