Alterando icone e titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Theme Dark</title>
+    <title>Mudando Tema</title>
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
@@ -14,7 +14,7 @@
       <label for="btn"></label>
     </div>
 
-    <h1>Mudança de Tema</h1>
+    <h1>Mudando o Tema</h1>
 
     <p>Usando apenas JavaScript, HTML e CSS.</p>
   </body>
